feat: add geopositions, currentTile and topLeftTile details to AreaPicture